加上gc日志