@@ -8,4 +8,5 @@ java -jar \
      -Ddata.url=http://nginx/trace.dat \
      -Doutput.dir=/root/result \
      -Dlogs.dir=/root/logs \
+     -XX:+PrintGCDetails \
      /root/dists/processor.jar
